<resources>
    <string name="app_name">Auxilium</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="btn_toSignup"><u>Sign Up</u></string>
    <string name="btn_toSignin"><u>Sign In</u></string>
    <string name="login_tv_email">E-mail</string>
    <string name="login_tv_password">Password</string>
    <string name="login_btn_signin">Sign In</string>
    <string name="login_tv_title">Hey there !\nReady to </string>
    <string name="login_tv_title2">dive in?</string>
    <string name="tv_login_createaccountprompt">Don\'t have an account?</string>
    <string name="register_tv_username">Username</string>
    <string name="register_tv_confirmpass">Confirm Password</string>
    <string name="btn_signup">Sign Up</string>
    <string name="tv_register_loginprompt">Already have an account?</string>
    <string name="tv_quotes">Listen Up!</string>
    <string name="crunching_data_just_for_you">Crunching data just for you</string>
    <string name="tv_pro_tips">Pro Tips</string>
    <string name="auxilium_team">Auxilium Team</string>
    <string name="logo_about_us">Logo About Us</string>
    <string name="capture_image">Capture Image</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="button_add_reply">Button Add Reply</string>
    <string name="username_s_post">Username\'s post</string>
    <string name="reply_to_this_post">Reply to this post</string>
    <string name="forum_picture">Forum Picture</string>
    <string name="post_time">3h</string>
    <string name="username">Username</string>
    <string name="post_description">Just got my new Samsung A14 and I\'m impressed! The battery life is phenomenal, lasting me through a full day of heavy usage with ease</string>
    <string name="post_likes">10</string>
    <string name="post_replies">8</string>
    <string name="add_to_wishlist">Add to Wishlist</string>
    <string name="battery">Battery</string>
    <string name="battery_label">Battery Label</string>
    <string name="brand">Brand</string>
    <string name="brand_label">Brand Label</string>
    <string name="charging">Charging</string>
    <string name="charging_label">Charging Label</string>
    <string name="chipset">Chipset</string>
    <string name="chipset_label">Chipset Label</string>
    <string name="colors">Colors</string>
    <string name="colors_label">Colors Label</string>
    <string name="earphone_jack">Earphone Jack</string>
    <string name="earphone_jack_label">Earphone Jack Label</string>
    <string name="main_camera_1">Main Camera 1</string>
    <string name="main_camera_1_label">Main Camera 1 Label</string>
    <string name="main_camera_2">Main Camera 2</string>
    <string name="main_camera_2_label">Main Camera 2 Label</string>
    <string name="main_camera_3">Main Camera 3</string>
    <string name="main_camera_3_label">Main Camera 3 Label</string>
    <string name="memory">Memory</string>
    <string name="memory_label">Memory Label</string>
    <string name="nfc">NFC</string>
    <string name="nfc_label">NFC Label</string>
    <string name="phone_names">Phone Names</string>
    <string name="phone_os">Phone OS</string>
    <string name="price">Price</string>
    <string name="price_label">Price Label</string>
    <string name="ram">RAM</string>
    <string name="ram_label">RAM Label</string>
    <string name="released_date">Released Date</string>
    <string name="release_date_label">Release Date Label</string>
    <string name="resolution">Resolution</string>
    <string name="resolution_label">Resolution Label</string>
    <string name="also_recommended_for_you">Also recommended for you</string>
    <string name="selfie_camera">Selfie Camera</string>
    <string name="selfie_camera_label">Selfie Camera Label</string>
    <string name="weight">Weight</string>
    <string name="weight_label">Weight Label</string>
    <string name="phone_rates">What would you rate Pixel 8?</string>
    <string name="support_text_get_ready">Get ready to be dazzled! Presenting the whole shebang of information!</string>
    <string name="delete_from_wishlist">Delete from Wishlist</string>
    <string name="support_title_ta_da">Ta-da! Your Dream Phone Awaits!</string>
    <string name="next_button">Next Button</string>
    <string name="about_us">About Us</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="language">Language</string>
    <string name="email_gmail_com">email@gmail.com</string>
    <string name="joined_dated">Joined Dated</string>
    <string name="language_typed">en</string>
    <string name="reset_password">Reset Password</string>
    <string name="logout">Logout</string>
    <string name="copyright">2024 © Auxilium</string>
    <string name="camera_button">Camera Button</string>
    <string name="gallery_button">Gallery Button</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="support_title_forgot_your">Forgot your \nNo problem!</string>
    <string name="support_title_password">password?</string>
    <string name="post">Post</string>
    <string name="hint_whats_good">What\'s good?</string>
    <string name="new_post">New Post</string>
    <string name="save_profile">Save Profile</string>
    <string name="edit_your_profile_here">Edit Your Profile Here</string>
    <string name="community_hub">Community Hub</string>
    <string name="history_button">History Button</string>
    <string name="new_arrival_button">New Arrival Button</string>
    <string name="supercharge_your_search">Supercharge your search</string>
    <string name="divider_line">|</string>
    <string name="emote_hello">👋</string>
    <string name="new_arrivals_title">New Arrivals 🚀</string>
    <string name="the_latest_phones_have_landed">The latest phones have landed.</string>
    <string name="recommended_for_you">Recommended For You</string>
    <string name="howdy">Howdy,</string>
    <string name="excited_to_find_yout_dream_phone_today">Excited to find your dream phone today?</string>
    <string name="userphones">UserPhones</string>
    <string name="wishlist_items">10 item(s)</string>
    <string name="next">Next</string>
    <string name="question_1">Question 1</string>
    <string name="how_important_is_performance">How important is performance ?</string>
    <string name="option_1">1</string>
    <string name="option_2">2</string>
    <string name="option_3">3</string>
    <string name="option_4">4</string>
    <string name="option_5">5</string>
    <string name="back">Back</string>
    <string name="question_2">Question 2</string>
    <string name="how_important_is_camera">How important is camera ?</string>
    <string name="question_3">Question 3</string>
    <string name="how_important_is_battery">How important is battery ?</string>
    <string name="question_4">Question 4</string>
    <string name="how_important_is_software">How important is software ?</string>
    <string name="question_5">Question 5</string>
    <string name="how_important_is_ram">How important is \nRAM ?</string>
    <string name="question_6">Question 6</string>
    <string name="how_important_is_storage">How important is storage ?</string>
    <string name="finish">Finish</string>
    <string name="question_7">Question 7</string>
    <string name="favorite_brand">Favorite Brand?</string>
    <string name="apple">Apple</string>
    <string name="poco">Poco</string>
    <string name="lainnya_tidak_ada">None of the Options</string>
    <string name="samsung">Samsung</string>
    <string name="asus">Asus</string>
    <string name="oppo">Oppo</string>
    <string name="vivo">Vivo</string>
    <string name="realme">Realme</string>
    <string name="xiaomi">Xiaomi</string>
    <string name="infinix">Infinix</string>
    <string name="huawei">Huawei</string>
    <string name="add_your_current_wishlist_here">Add Your Current Wishlist Here....</string>
    <string name="profile_names">Profile Names</string>
    <string name="profile_quotes">Profile Quotes</string>
    <string name="team_roles">Team Roles</string>
    <string name="reply_text">Reply Text</string>
    <string name="delete_wishlist">Delete from Wishlist</string>
    <string name="history_number">History Number</string>
    <string name="tv_replies">Replies</string>
    <string name="tv_aboutDesc">Auxilium is your personalized mobile phone recommendation app. By using advanced machine learning and user feedback, we provide tailored phone suggestions. Our features include user authentication, a wishlist, a community forum, and local data storage. With seamless cloud integration, Auxilium makes choosing your next phone easy and confident.</string>

</resources>