<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dark_background"
    tools:context=".view.question.quest.Quest5Fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/quest_logo"
            android:layout_width="65dp"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_auxilium_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/question_numbs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="31dp"
            android:layout_marginTop="63dp"
            android:fontFamily="@font/clash_grotesk_regular"
            android:text="@string/question_5"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quest_logo" />

        <TextView
            android:id="@+id/question_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="31dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/clash_grotesk_regular"
            android:text="@string/how_important_is_ram"
            android:textColor="@color/light_peach"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/question_numbs" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/question_text"
            app:layout_constraintTop_toBottomOf="@id/question_text">

            <RadioButton
                android:id="@+id/radio_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/light_peach"
                android:text="@string/option_1"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radio_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/light_peach"
                android:text="@string/option_2"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radio_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/light_peach"
                android:text="@string/option_3"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radio_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/light_peach"
                android:text="@string/option_4"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radio_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/light_peach"
                android:text="@string/option_5"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="63dp"
            android:layout_marginEnd="31dp"
            android:layout_marginBottom="82dp"
            android:backgroundTint="@color/light_peach"
            android:fontFamily="@font/clash_grotesk_regular"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:cornerRadius="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_group" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="17dp"
            android:backgroundTint="@color/transparent"
            android:fontFamily="@font/clash_grotesk_regular"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textColor="@color/light_peach"
            android:textSize="18sp"
            app:cornerRadius="25dp"
            app:layout_constraintEnd_toStartOf="@id/next_button"
            app:layout_constraintTop_toTopOf="@id/next_button"
            app:strokeColor="@color/light_peach"
            app:strokeWidth="1dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>