<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/transparent_bg"
    tools:context=".ui.forum.AddPostFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/top_rounded_background"
        android:padding="16dp">

        <View
            android:id="@+id/divider_guest1"
            android:layout_width="42dp"
            android:layout_height="2dp"
            android:background="#1F1F1F"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_new_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:fontFamily="@font/clash_grotesk_regular"
            android:text="@string/new_post"
            android:textSize="24sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_add_post"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:elevation="0dp"
            app:boxStrokeColor="@color/transparent"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_new_post">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_add_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-12dp"
                android:backgroundTint="@color/transparent"
                android:fontFamily="@font/clash_grotesk_regular"
                android:hint="@string/hint_whats_good"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:paddingVertical="18dp"
                android:textColorHint="@color/hint_text_tint"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.utils.widget.ImageFilterButton
            android:id="@+id/btn_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/gallery_button"
            android:src="@drawable/ic_gallery"
            app:layout_constraintStart_toStartOf="@id/ti_add_post"
            app:layout_constraintTop_toBottomOf="@id/ti_add_post"
            tools:ignore="TouchTargetSizeCheck,RedundantDescriptionCheck" />

        <androidx.constraintlayout.utils.widget.ImageFilterButton
            android:id="@+id/btn_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/camera_button"
            android:src="@drawable/ic_camera"
            app:layout_constraintStart_toEndOf="@id/btn_gallery"
            app:layout_constraintTop_toTopOf="@id/btn_gallery"
            tools:ignore="TouchTargetSizeCheck,RedundantDescriptionCheck" />

        <ImageView
            android:id="@+id/iv_show_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_gallery"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#1E1E1E"
            android:fontFamily="@font/clash_grotesk_regular"
            android:text="@string/post"
            android:paddingVertical="8dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_show_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
